# rag-qa-system

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: eval_report.json  testset.json
data/docs/: DeepSeek使用指南.txt  Python性能优化.md  RAG入门指南.md
data/index/: chroma.sqlite3
src/: cache.py  chunker.py  embedder.py  evaluator.py  indexer.py  loader.py  pipeline.py  retriever.py  rewriter.py  server.py  vision.py
tests/: test_chunker.py  test_eval.py  test_loader.py  test_pipeline.py
